# httpie-salesforce

./: LICENSE  README.md  httpie_salesforce.py  httpie_salesforce_auth.py  main.py  pyproject.toml  pytest.toml  tox.toml
.github/workflows/: tox.yml
tests/: test_password_flow.py  test_plugin_init.py
