[project]
name = "httpie-salesforce"
version = "0.1.0"
description = "HTTPie Authorization plugin for Salesforce API"
license = "BSD-3-Clause"
authors = [
    {name = "Dmytro Larkin", email = "dmitry.larkin@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpie>=3.2.4",
    "requests>=2.32.5",
]

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "httpie-salesforce"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
