[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "httpie-salesforce"
version = "0.2.2"
description = "HTTPie Authorization plugin for Salesforce API"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Dmytro Larkin", email = "dmitry.larkin@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "httpie>=3.2.4",
    "requests>=2.32.5",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/dml/httpie-salesforce"
Repository = "https://github.com/dml/httpie-salesforce.git"
Issues = "https://github.com/dml/httpie-salesforce/issues"

[[tool.uv.index]]
name = "sandbox"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "production"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true
